# vllm-ascend

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile.310p  Dockerfile.310p.openEuler  Dockerfile.a3  Dockerfile.a3.openEuler  Dockerfile.a5  Dockerfile.a5.openEuler  Dockerfile.openEuler  README.md  README.zh.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  typos.toml
csrc/: build.sh  (+6 more)
examples/omniinfer/: .gitignore  CONTRIBUTION.md  CONTRIBUTION_en.md  MANIFEST.in  README.md  README_en.md  Third Party Open Source Software Notice  pyproject.toml  setup.py
examples/omniinfer/docs/: add_custom_model.md  omni_infer_installation_guide.md  omni_infer_quick_start.md
examples/omniinfer/infer_engines/: bash_install_code.sh  bash_install_code_optimization.sh  bash_install_code_v0.8.3.sh  bash_install_mock.sh  bash_install_mock_no_npus.sh
examples/omniinfer/omni/models/: __init__.py
examples/omniinfer/omni/quantization/: __init__.py
examples/omniinfer/tests/: run_ut_test.sh
examples/omniinfer/tests/test_config/: config_d.yaml  config_kimi_d.yaml  config_kimi_p.yaml  config_p.yaml  test_config_decode.json  test_config_decode_a2.json  test_config_decode_dp288.json  test_config_decode_k2.json  test_config_decode_pangu_ultra_moe.json  test_config_prefill.json  test_config_prefill_a2.json  test_config_prefill_bf16.json  test_config_prefill_int4.json  test_config_prefill_k2.json  test_config_prefill_pangu_ultra_moe.json  test_config_prefill_pangu_ultra_moe_a2.json
examples/omniinfer/tools/: README.md  pyproject.toml
examples/omniinfer/tools/ansible/: README.md  omni_infer_inventory_used_for_CI.yml  omni_infer_inventory_user_for_long_term_test.yml  omni_infer_server_used_for_CI.yml  omni_infer_server_used_for_long_term_test.yml
examples/omniinfer/tools/docker/: Dockerfile.openEuler.py311.CANNdev.910c  Dockerfile.vllm-omni.source  build_base_py311.sh  build_vllm.sh
examples/omniinfer/tools/omni_cli/: config_transform.py  main.py  omni_infer_deployment.json
examples/omniinfer/tools/quant/: README.md  quant_deepseek_kimi2.py  quant_qwen.py
(+1367 files in other folders)
